--- a/app1/templates/Workspace.html
+++ b/app1/templates/Workspace.html
@@ -1,9 +1,35 @@
 <div id="workspace">
-    <ul class="nav nav-tabs">
-        <li {{#ifequal active "task"}}class="active"{{/ifequal}}><a href="#">Task</a></li>
-        <li {{#ifequal active "resource"}}class="active"{{/ifequal}}><a href="#">Resource</a></li>
-        <li {{#ifequal active "case"}}class="active"{{/ifequal}}><a href="#">Case</a></li>
-        <li {{#ifequal active "config"}}class="active"{{/ifequal}}><a href="#">Configuration</a></li>
-        <li {{#ifequal active "plugin"}}class="active"{{/ifequal}}><a href="#">Plugin</a></li>
-    </ul>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Logicmonitor Cermet</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li {{#ifequal active "task"}}class="active"{{/ifequal}}><a href="#tab=task">Task</a></li>
+                    <li class="dropdown {{#ifcontain active "resource"}}active{{/ifcontain}}">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resource <b class="caret"></b></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li {{#ifequal active "resource-host"}}class="active"{{/ifequal}}><a href="#tab=resource-host">Host</a></li>
+                            <li {{#ifequal active "resource-browser"}}class="active"{{/ifequal}}><a href="#tab=resource-browser">Browser</a></li>
+                        </ul>
+                    </li>
+                    <li {{#ifequal active "case"}}class="active"{{/ifequal}}><a href="#tab=case">Case</a></li>
+                    <li {{#ifequal active "configuration"}}class="active"{{/ifequal}}><a href="#tab=configuration">Configuration</a></li>
+                    <li {{#ifequal active "plugin"}}class="active"{{/ifequal}}><a href="#tab=plugin">Plugin</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div id="main-content"></div>
 </div>
+
