--- a/commons/css/startup.css
+++ b/commons/css/startup.css
@@ -1,3 +1,3 @@
-@import "bootstrap.css";
-@import "bootstrap-theme.css";
-@import "app1.css";
+@import "./bootstrap.css";
+@import "./bootstrap-theme.css";
+@import "./app1.css";
